Fix hero section button layout on small screens and navbar toggle icon (#58)
* fix(ui): fix hero section button layout on small screens and navbar toggle icon

* fix: fix logo alignment issue on larger screens

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,21 +30,9 @@
 }
 
 .navbar__logo img {
-  width: unset;
   height: 40px;
 }
 
-.navbar__logo::after {
-  content: 'Apache GraphAr';
-  display: inline-block;
-  font-size: 1em;
-  color: var(--ifm-hero-text-color);
-  font-weight: 700;
-  text-align: center;
-  position: absolute;
-  top: 15px;
-  margin-left: 8px;
-}
 
 .header-github-link:hover {
   opacity: 0.6;
